[package]
name = "antlion"
version = "0.1.0"
edition = "2021"
description = "Handy way to evaluate at compile-time any Rust expression"
repository = "https://github.com/yvan-sraka/antlion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
