[package]
name = "antlion"
version = "0.3.0"
edition = "2021"
description = "Handy way to evaluate at compile-time any Rust expression"
repository = "https://github.com/yvan-sraka/antlion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
