[package]
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Handy way to evaluate at compile-time any Rust expression"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "reflexive"
repository = "https://github.com/yvan-sraka/reflexive"
rust-version = "1.56.1"
version = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
